--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- 登录/注册 -->
     <div id="auth-screen">
         <div class="auth-card">
-            <h1>明日香revive幻想农场</h1>
+            <h1>幻想农场</h1>
             <p style="color:#64748b; margin-bottom: 2rem;">二次元·现代农场</p>
             <input type="text" id="username" class="auth-input" placeholder="输入用户名" autocomplete="off">
             <input type="password" id="password" class="auth-input" placeholder="输入密码">
