开始导入pixiJS制作核心区田地

--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,7 @@
 
             <!-- 中间: 农田 -->
             <section class="farm-area">
-                <div id="farm-grid" class="farm-grid">
-                    <!-- 9x9 -->
-                </div>
+                <div id="farm-canvas-container"></div>
             </section>
 
             <!-- 右侧边栏: 更多角色/信息 -->
@@ -122,6 +120,8 @@
     <!-- 通知容器 -->
     <div id="toast-container"></div>
 
+    <script src="https://pixijs.download/v7.x/pixi.min.js"></script>
+    <script src="js/pixi-renderer.js"></script>
     <script src="app.js"></script>
 </body>
 
